[gd_scene load_steps=17 format=3 uid="uid://b1ajdfvfpyteb"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy.gd" id="1_4g5oh"]
[ext_resource type="AudioStream" uid="uid://chio2v53n4n4a" path="res://Assets/Audio/laserSmall_000.ogg" id="2_jh8y6"]
[ext_resource type="AudioStream" uid="uid://ffmo0pnfeef5" path="res://Assets/Audio/laserSmall_001.ogg" id="3_7cxlr"]
[ext_resource type="AudioStream" uid="uid://bm846taqelydv" path="res://Assets/Audio/laserSmall_002.ogg" id="4_tyucb"]
[ext_resource type="AudioStream" uid="uid://tv5m2s8y4pbo" path="res://Assets/Audio/laserSmall_003.ogg" id="5_r7ljp"]
[ext_resource type="AudioStream" uid="uid://dutfdvf647c53" path="res://Assets/Audio/laserSmall_004.ogg" id="6_lvbwj"]
[ext_resource type="Texture2D" uid="uid://djm1simxxcuur" path="res://Assets/Tilesheet/simpleSpace_tilesheet.png" id="7_ktdbq"]
[ext_resource type="AudioStream" uid="uid://d1j8rxhtjcefq" path="res://Assets/Audio/explosionCrunch_000.ogg" id="8_xwetb"]
[ext_resource type="AudioStream" uid="uid://d4kxso6o22mof" path="res://Assets/Audio/impactMetal_002.ogg" id="9_ll2u2"]

[sub_resource type="Animation" id="Animation_f5jp5"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amay2"]
_data = {
"shoot": SubResource("Animation_f5jp5")
}

[sub_resource type="Animation" id="Animation_j4msf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w020n"]
resource_name = "idle"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-8.69, -10.08), Vector2(20.235, -14.125), Vector2(-17.67, 10.5), Vector2(13.6, 11.325), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionPolygon2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.10472, 0.122173, -0.0785398, 0.139626, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ge7p"]
_data = {
"RESET": SubResource("Animation_j4msf"),
"idle": SubResource("Animation_w020n")
}

[sub_resource type="Curve" id="Curve_qjbwq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.582031, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_f6sfp"]
offsets = PackedFloat32Array(0, 0.131579, 0.723684, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.92549, 1, 1, 1, 0.815686, 1, 1, 1, 0)

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_4g5oh")
shoot_sounds = Array[AudioStream]([ExtResource("2_jh8y6"), ExtResource("3_7cxlr"), ExtResource("4_tyucb"), ExtResource("5_r7ljp"), ExtResource("6_lvbwj")])

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(14, -22, 27, -22, 27, 23, 14, 23, 14, 6, 11, 6, 11, 14, 5, 14, 5, 21, -4, 21, -4, 14, -10, 14, -10, 6, -13, 6, -13, 23, -26, 23, -26, -22, -13, -22, -13, 2, -10, 2, -10, -6, 10, -6, 10, 2, 14, 2)

[node name="ShotSignal" type="Area2D" parent="CollisionPolygon2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="CollisionPolygon2D/ShotSignal"]
polygon = PackedVector2Array(14, -22, 27, -22, 27, 23, 14, 23, 14, 6, 11, 6, 11, 14, 5, 14, 5, 21, -4, 21, -4, 14, -10, 14, -10, 6, -13, 6, -13, 23, -26, 23, -26, -22, -13, -22, -13, 2, -10, 2, -10, -6, 10, -6, 10, 2, 14, 2)

[node name="Sprite2D" type="Sprite2D" parent="CollisionPolygon2D"]
position = Vector2(-27, -4)
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_ktdbq")
offset = Vector2(22.5, 6.33333)
region_enabled = true
region_rect = Rect2(256, 265, 63, 54)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="AnimationShoot" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_amay2")
}

[node name="IdleFloating" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ge7p")
}
autoplay = "idle"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 0.85
randomness = 0.12
lifetime_randomness = 0.07
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
angular_velocity_min = 89.92
angular_velocity_max = 360.0
damping_min = 90.072
damping_max = 100.0
angle_min = 114.8
angle_max = 260.9
scale_amount_min = 5.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_qjbwq")
color_ramp = SubResource("Gradient_f6sfp")

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jh8y6")
volume_db = -5.0
bus = &"SFX"

[node name="Hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_xwetb")
volume_db = -5.0
bus = &"SFX"

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ll2u2")
volume_db = 8.0
pitch_scale = 0.6
bus = &"SFX"

[connection signal="area_entered" from="CollisionPolygon2D/ShotSignal" to="." method="_on_shot_signal_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
